ci: change docker image local name

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 dist: bionic
 env:
   global:
-    - LOCAL_IMAGE="graph-notebook:local"
+    - LOCAL_IMAGE="graph-notebook-docker:local"
     - DEV_IMAGE="purpleteam/graph-notebook-docker-dev:$TRAVIS_COMMIT"
     - RELEASE_IMAGE="adevinta/graph-notebook-docker"
 services:
