--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,5 @@ deploy:
     skip_cleanup: true
     script: ./script/push_docker.sh $LOCAL_IMAGE $DEV_IMAGE
     on:
+      all_branches: true
       tags: false
