--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+# graph-notebook
+graph-notebook==3.0.2
 notebook==5.7.10
 tornado==4.5.3
 rdflib==5.0.0
-graph-notebook==3.0.2
+# amazon-neptune-tools
 gremlinpython==3.4.12
 requests==2.26.0
 backoff==1.11.1
