--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-# graph-notebook
+# graph-notebook dependencies.
 graph-notebook==3.0.2
 notebook==5.7.10
 tornado==4.5.3
 rdflib==5.0.0
-# amazon-neptune-tools
 gremlinpython==3.4.12
+
+# neptune_python_utils dependencies.
 requests==2.26.0
-backoff==1.11.1
-cchardet==2.1.7
-aiodns==3.0.0
-idna-ssl==1.1.0
