ci: fix error in release tag

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ env:
   global:
     - LOCAL_IMAGE="graph-notebook-docker:local"
     - DEV_IMAGE="purpleteam/graph-notebook-docker-dev:$TRAVIS_COMMIT"
-    - RELEASE_IMAGE="adevinta/graph-notebook-docker"
+    - RELEASE_IMAGE="adevinta/graph-notebook-docker:$TRAVIS_TAG"
 services:
   - docker
 script:
