--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ script:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: ./script/push_docker.sh $LOCAL_IMAGE $RELEASE_IMAGE
+    script: ./script/push $LOCAL_IMAGE $RELEASE_IMAGE
     on:
       tags: true
   - provider: script
     skip_cleanup: true
-    script: ./script/push_docker.sh $LOCAL_IMAGE $DEV_IMAGE
+    script: ./script/push $LOCAL_IMAGE $DEV_IMAGE
     on:
       all_branches: true
       tags: false
